# jetson-nano-yolov8

./: .gitignore  CMakeLists.txt  README.md  项目总体.md
scripts/: diagnose.py  diagnose_root.py  export_onnx.py  final_diagnose.py  gen_calib.py  gen_calib_bin.py  test_int8_accuracy.py  ultimate_diagnose.py  verify_export.py  verify_onnx.py
src/: cuda_preprocess.cu  main.cpp
src/camera/: Camera.cpp  Camera.h
src/detector/: YoloV8Detector.cpp  YoloV8Detector.h  YoloV8PostProcess.cpp  YoloV8PostProcess.h
src/utils/: Types.h
